--- a/app/assets/stylesheets/nav-bar.scss
+++ b/app/assets/stylesheets/nav-bar.scss
@@ -52,9 +52,10 @@
 }
 
 .evilnav {
+	margin-left: 10%;
 	background-color: white;
 	height: 60px;
-	width: 100%;
+	width: 80%;
 	position: fixed;
 	top: 0;
 
